<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                >

	<ImageView
		android:id="@+id/iv_home_recommend_item"
		android:layout_width="90dp"
		android:layout_height="90dp"
		android:layout_marginTop="10dp"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_toRightOf="@id/iv_home_recommend_item"
		android:orientation="vertical">


		<LinearLayout
			android:id="@+id/ll_home_mac_type"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tv_home_mac_type"
				style="@style/home_recommend_mac"
				android:text="@string/home_mac_type"/>

			<TextView
				android:id="@+id/tv_home_mac_typename"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/ll_home_mac_addr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tv_home_mac_addr"
				style="@style/home_recommend_mac"
				android:text="@string/home_mac_addr"/>

			<TextView
				android:id="@+id/tv_home_mac_addrname"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/ll_home_mac_owner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tv_home_mac_owner"
				style="@style/home_recommend_mac"
				android:text="@string/home_mac_owner"/>

			<TextView
				android:id="@+id/tv_home_mac_ownername"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/ll_home_mac_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tv_home_mac_phone"
				style="@style/home_recommend_mac"
				android:text="@string/home_mac_phone"/>

			<TextView
				android:id="@+id/tv_home_mac_phoneNum"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

	</LinearLayout>
</RelativeLayout>