<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lv_home_title"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rv_home_city"
                android:layout_width="40dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp" />

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="30dp"

                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/marker" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rv_home_search"
                android:layout_width="280dp"
                android:layout_height="wrap_content"

                >

                <EditText
                    android:id="@+id/et_home_search"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="输入关键字" />

                <ImageView
                    android:id="@+id/iv_home_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/search" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_home_message"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/aaa" />

        </LinearLayout>

        <include layout="@layout/home_activity_view_page_message" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#0f0" />
        <!--<ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#B2C4D1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#0f0" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/home_iv_tv_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/home_iv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_home_doctor"
                        style="@style/home_iv_value"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:onClick="zhaozhuanjia"
                        android:src="@mipmap/touxiang3" />

                    <ImageView
                        android:id="@+id/iv_home_agricultural"
                        style="@style/home_iv_value"

                        android:src="@mipmap/nj" />

                    <ImageView
                        android:id="@+id/iv_home_marchinery"
                        style="@style/home_iv_value"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/guide2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_tv1">

                    <TextView
                        android:id="@+id/home_iv_doctor"
                        style="@style/home_tv_value"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/home_tv_doctor" />

                    <TextView
                        android:id="@+id/home_tv_agricultural"
                        style="@style/home_tv_value"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/home_tv_agricultural" />

                    <TextView
                        android:id="@+id/home_tv_marchinery"
                        style="@style/home_tv_value"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"

                        android:text="@string/home_tv_marchinery" />

                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0f0" />

            <LinearLayout
                android:id="@+id/home_iv_tv_group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/home_iv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_home_day"
                        style="@style/home_iv_value"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/tx2" />

                    <ImageView
                        android:id="@+id/iv_home_book"
                        style="@style/home_iv_value"
                        android:src="@mipmap/shuku" />

                    <ImageView
                        android:id="@+id/iv_home_weather"
                        style="@style/home_iv_value"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/sasa"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_tv1">

                    <TextView
                        android:id="@+id/home_iv_day"
                        style="@style/home_tv_value"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/home_tv_day" />

                    <TextView
                        android:id="@+id/home_tv_book"
                        style="@style/home_tv_value"
                        android:text="@string/home_tv_book" />

                    <TextView
                        android:id="@+id/home_tv_weather"
                        style="@style/home_tv_value"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/home_tv_weather" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0f0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_tv_recommend"
                android:textSize="20dp" />


        </LinearLayout>

        <ListView
            android:id="@+id/home_commend_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>


</ScrollView>